--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Somatório dos múltiplos de 3 e 5</title>
+    <title>Somatório dos divisíveis de 3 e 5</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Somatório dos múltiplos de 3 e 5</h1>
+    <h1>Somatório dos divisíveis de 3 e 5</h1>
 
     <label for="numero">Insira um número inteiro positivo:</label>
     <input type="number" id="numero" />
